# uacalcsrc

./: .classpath  .gitignore  .project  ALGEBRA_LOADING_PATTERNS_SUMMARY.md  ANSWER_TO_QUESTIONS.md  BASE_TEST_INFRASTRUCTURE_SUMMARY.md  BASIC_LATTICE_COMPATIBILITY_TEST_IMPLEMENTATION_SUMMARY.md  CLOSURE_COMPARISON.md  CONGRUENCE_LATTICE_UPDATE_SUMMARY.md  CON_SUB_IMPLEMENTATION_SUMMARY.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FINAL_TEST_REPORT.md  FIX_TEST_WORKING_DIRECTORY.md  FREE_ALGEBRA_TERMS_IMPLEMENTATION_TASK.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PATTERNS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENT_CLONE_FIX.md  JAVA_COMPATIBILITY_SUMMARY.md  LATTICES_COMPATIBILITY_TEST_IMPLEMENTATION_SUMMARY.md  LATTICE_COMPATIBILITY_TEST_IMPLEMENTATION_SUMMARY.md  MALCEV_REORGANIZATION_SUMMARY.md  MEMBERSHIP_TESTER_STATUS.md  NEXT_MALCEV.md  OPERATIONS_COMPATIBILITY_TEST_IMPLEMENTATION_SUMMARY.md  OPERATION_COMPATIBILITY_TEST_SUMMARY.md  OPERATION_SYMBOL_COMPATIBILITY_TEST_SUMMARY.md  ORDER_COMPATIBILITY_TEST_IMPLEMENTATION_SUMMARY.md  PYTHON_BINDINGS_COMPLETE.md  PYTHON_BINDINGS_TEST_RESULTS.md  README-rust-python.md  README.md  SETUP_SUMMARY.md  SUBALGEBRA_LATTICE_IMPLEMENTATION_SUMMARY.md  SUBPRODUCT_IMPLEMENTATION_SUMMARY.md  TASKS_67_74_STATUS.md  TASK_12_COMPLETION_SUMMARY.md  TASK_13_COMPLETION_SUMMARY.md  TASK_25_IMPLEMENTATION_SUMMARY.md  (+70 more)
.cargo/: config.toml
benches/: benchmarks.rs  uacalc_benchmarks.rs
dependency_analysis/: class_dependencies.mmd  dependencies.dot  dependencies.json  package_dependencies.mmd  summary.txt
docs/: api.md  evaluation_refactoring.md  io_format.md  memory_limiting.md
fixed_call_graph_analysis/: fixed_call_graph.json  fixed_call_graph_summary.txt  implementation_guide.md
full_analysis_demo/: analysis_summary.json  report_Task 11 - AbstractOperation.md  report_Task 13 - AbstractIntOperation.md  report_Task 16 - OrderedSets.md  report_Task 17 - Pool.md  report_Task 19 - BasicBinaryRelation.md  report_Task 2 - SimilarityType.md  report_Task 20 - Lattice.md  report_Task 21 - BinaryRelation.md  report_Task 22 - Presentation.md  report_Task 23 - IntArray.md  report_Task 24 - AlgebraFromMinimalSets.md  report_Task 25 - TermOperation.md  report_Task 26 - CentralityData.md  report_Task 27 - ParameterizedOperation.md  report_Task 28 - SmallLattice.md  report_Task 29 - Subtrace.md  report_Task 3 - Horner.md  report_Task 30 - Element.md  report_Task 31 - TupleWithMin.md  report_Task 32 - MaltsevDecompositionIterator.md  report_Task 33 - TermOperationImp.md  report_Task 34 - CloserTiming.md  report_Task 35 - Equations.md  report_Task 36 - PartiallyDefinedLattice.md  report_Task 37 - Mace4Reader.md  report_Task 38 - MaltsevProductDecomposition.md  report_Task 39 - QuotientElement.md  report_Task 4 - SimpleList.md  report_Task 40 - Variable.md  report_Task 41 - SmallAlgebra.md  report_Task 42 - Polymorphisms.md  report_Task 43 - Homomorphism.md  report_Task 44 - Terms.md  report_Task 45 - JSONChannel.md  report_Task 46 - TypeFinder.md  report_Task 47 - BasicSet.md  report_Task 48 - Taylor.md  report_Task 49 - OperationWithDefaultValue.md  report_Task 5 - Partition.md  (+40 more)
improved_dependency_analysis/: improved_dependencies.json  improved_dependencies.mmd  improved_dependencies_summary.txt
java_wrapper/: README.md
java_wrappers/: pom.xml
python/: requirements-test.txt  setup.py  test_malcev_python.py  test_sub_product_algebra_python.py  (+1 more)
uacalc-core/: Cargo.toml
uacalc-core/examples/: basic_usage.rs  evaluation_benchmark.rs
uacalc-core/src/: algebra.rs  binary_relation.rs  clones.rs  conlat.rs  equation.rs  error.rs  free_algebra.rs  lib.rs  malcev.rs  memory.rs  operation.rs  partition.rs  permutation_group.rs  polymorphisms.rs  presentation.rs  product.rs  property_checker.rs  quotient.rs  subalgebra.rs  tct.rs  term_finder.rs  utils.rs  variety.rs
uacalc-core/src/conlat/: cg.rs  join_irreducibles.rs  lattice.rs  lattice_builder.rs  mod.rs  principal.rs
uacalc-core/src/fplat/: mod.rs  partially_defined_lattice.rs
uacalc-core/src/lat/: mod.rs  order.rs  ordered_sets.rs
uacalc-core/src/taylor/: canonical.rs  int_array.rs  mod.rs  polynomial.rs  search.rs  taylor.rs
uacalc-core/src/term/: analysis.rs  arena.rs  evaluation.rs  mod.rs  term.rs  variable.rs
uacalc-core/tests/: test_automorphism_debug.rs  test_baker2_deadlock.rs  test_deadlock_debug.rs  test_free_algebra_malcev.rs  test_majority_term_memory.rs  test_malcev_segfault.rs  test_product.rs  test_quotient.rs  test_semilattice_term.rs  test_subalgebra.rs  test_tct_type_compatibility.rs
uacalc-py/: Cargo.toml  MANIFEST.in  pyproject.toml
uacalc-py/src/: lib.rs
uacalc_lib/: Cargo.toml
uacalc_lib/java_wrapper/src/alg/sublat/: BasicSetWrapper.java
uacalc_lib/src/: alg.rs  alg.rs.backup  alg_bindings.rs  element.rs  eq.rs  example.rs  fplat.rs  group.rs  io.rs  lat.rs  lib.rs  malcev_bindings.rs  terms.rs  types.rs  util.rs
uacalc_lib/src/alg/: algebra_from_minimal_sets.rs  algebra_with_generating_vector.rs  algebras.rs  basic_algebra.rs  basic_operation.rs  big_product_algebra.rs  closer.rs  closer_timing.rs  free_algebra.rs  general_algebra.rs  homomorphism.rs  malcev.rs  maltsev_decomposition_iterator.rs  maltsev_product_decomposition.rs  matrix_power_algebra.rs  mod.rs  operation_symbol.rs  parameterized_algebra.rs  polin_like_algebra.rs  power_algebra.rs  product_algebra.rs  reduct_algebra.rs  small_algebra.rs  subalgebra.rs  sublat.rs  unary_terms_monoid.rs
uacalc_lib/src/alg/conlat/: basic_binary_relation.rs  centrality_data.rs  congruence_lattice.rs  mod.rs  partition.rs  polymorphisms.rs  print_type.rs  subtrace.rs  type_finder.rs
uacalc_lib/src/alg/op/: abstract_int_operation.rs  abstract_operation.rs  int_operation.rs  mod.rs  operation.rs  operation_symbol.rs  operation_with_default_value.rs  operations.rs  parameterized_operation.rs  similarity_type.rs  term_operation_imp.rs
uacalc_lib/src/alg/parallel/: mod.rs
uacalc_lib/src/alg/sublat/: basic_set.rs  mod.rs  subalgebra_lattice.rs
uacalc_lib/tests/: binding_tests.rs  python_integration_tests.rs
(+583 files in other folders)
