[package]
name = "uacalc-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "uacalc_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
thiserror = "1.0"
derive_more = "0.99"
lazy_static = "1.4"

[build-dependencies]
pyo3-build-config = "0.20"