[package]
name = "uacalc"
version = "0.1.0"
edition = "2021"
authors = ["UACalc Contributors","J.J. Wannenburg"]
license = "MIT"
repository = "https://github.com/jamiewannenburg/uacalcsrc"

[dependencies]
# Add any external dependencies here as needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
num-bigint = "0.4"
num-traits = "0.2"
quick-xml = "0.31"
# Test infrastructure dependencies
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[features]
default = ["test-infrastructure"]
test-infrastructure = []

[dev-dependencies]
# Test dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
thiserror = "1.0"

[[bench]]
name = "uacalc_benchmarks"
harness = false