[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uacalc"
version = "0.1.0"
description = "Universal Algebra Calculator Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UACalc Contributors"}
]
keywords = ["algebra", "universal-algebra", "mathematics", "lattice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://uacalc.org"
Repository = "https://github.com/uacalc/uacalcsrc"
Documentation = "https://uacalc.org"

[tool.maturin]
module-name = "uacalc_lib"
python-source = "python"
manifest-path = "uacalc_lib/Cargo.toml"
