[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uacalc-rust"
version = "0.1.0"
description = "Rust implementation of UACalc operations with Python bindings"
authors = ["UACalc Project"]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "uacalc_rust"