[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uacalc"
version = "0.0.3"
description = "Universal Algebra Calculator Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "UACalc Contributors"}
]
keywords = ["algebra", "universal-algebra", "mathematics", "lattice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://uacalc.org"
Repository = "https://github.com/uacalc/uacalcsrc"
Documentation = "https://uacalc.org"

[tool.maturin]
module-name = "uacalc_lib"
python-source = "python"
manifest-path = "uacalc_lib/Cargo.toml"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0.0",
    "psutil>=5.9.0",
]
drawing = [
    "networkx>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["python/uacalc/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]

[tool.coverage.run]
source = ["python/uacalc"]
omit = [
    "python/uacalc/tests/*",
    "python/uacalc/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "uacalc_lib.*"
ignore_missing_imports = true
