[package]
name = "uacalc-core"
version = "0.1.0"
edition = "2021"
description = "Core universal algebra library for UACalc with integer-optimized operations"
license = "MIT"
repository = "https://github.com/uacalc/uacalc-rust"
keywords = ["algebra", "mathematics", "universal-algebra", "operations", "partitions", "relations"]
categories = ["science", "mathematics"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
bitvec = { workspace = true, features = ["alloc", "serde"] }
petgraph = { workspace = true }
rayon = { workspace = true, optional = true }
smallvec = { workspace = true }
ahash = { workspace = true }
arrayvec = { workspace = true }

[features]
default = ["conlat", "term-eval"]
parallel = ["rayon"]
conlat = []
term-eval = []
taylor = []

[dev-dependencies]
criterion = { workspace = true }

