[package]
name = "uacalc-core"
version = "0.1.0"
edition = "2021"
description = "Core universal algebra library for UACalc with integer-optimized operations"
license = "MIT"
repository = "https://github.com/uacalc/uacalc-rust"
keywords = ["algebra", "mathematics", "universal-algebra", "operations", "partitions", "relations"]
categories = ["science", "mathematics"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
bitvec = { workspace = true, features = ["alloc", "serde"] }
petgraph = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
smallvec = { workspace = true }
ahash = { workspace = true }
arrayvec = { workspace = true }
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["conlat", "term-eval", "mimalloc"]
parallel = ["rayon"]
conlat = ["dep:petgraph"]
term-eval = []
taylor = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
profiling = ["dep:chrono"]
simd = []

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
proptest = "1.0"
test-case = "3.0"
flamegraph = "0.6"
heaptrack = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1

