[package]
name = "uacalc-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for UACalc core library with comprehensive universal algebra support"
license = "MIT"
repository = "https://github.com/uacalc/uacalc-rust"
keywords = ["universal-algebra", "congruence-lattice", "term-evaluation", "progress-reporting", "mathematics"]
authors = ["UACalc Team <uacalc@example.com>"]

[lib]
name = "uacalc_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
uacalc-core = { path = "../uacalc-core", features = ["conlat", "term-eval", "taylor", "memory-limit"] }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.18"
parking_lot = "0.12"

[build-dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[features]
default = ["conlat", "term-eval", "taylor", "memory-limit"]
conlat = ["uacalc-core/conlat"]
term-eval = ["uacalc-core/term-eval"]
taylor = ["uacalc-core/taylor"]
parallel = ["uacalc-core/parallel"]
memory-limit = ["uacalc-core/memory-limit"]
full = ["conlat", "term-eval", "taylor", "parallel", "memory-limit"]
minimal = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

