[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uacalc"
version = "0.2.0"
description = "Universal Algebra Calculator - Python bindings for Rust core with comprehensive universal algebra support"
readme = "../README-rust-python.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["algebra", "mathematics", "universal-algebra", "congruence-lattice", "term-evaluation", "progress-reporting"]
authors = [
    {name = "UACalc Team", email = "uacalc@example.com"}
]
maintainers = [
    {name = "UACalc Team", email = "uacalc@example.com"}
]

dependencies = [
    "numpy>=1.20.0",
    "typing-extensions>=3.7.4",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.3.0",
    "networkx>=2.5",
    "graphviz>=0.16",
]
jupyter = [
    "ipywidgets>=7.6.0",
    "jupyter>=1.0",
    "notebook>=6.0",
]
progress = [
    "tqdm>=4.60.0",
]
async = [
    "asyncio",
    "aiofiles",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-benchmark>=3.4",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "jupyter>=1.0",
    "ipython>=7.0",
    "tqdm>=4.60.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-benchmark>=3.4",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/uacalc/uacalc-rust"
Documentation = "https://uacalc.readthedocs.io/"
Repository = "https://github.com/uacalc/uacalc-rust"
"Bug Tracker" = "https://github.com/uacalc/uacalc-rust/issues"

[tool.maturin]
features = ["pyo3/extension-module", "conlat", "term-eval"]
module-name = "uacalc_rust"
