[package]
name = "uacalc_lib"
version = "0.0.5"
edition = "2021"
authors = ["UACalc Contributors", "J.J. Wannenburg"]
license = "MIT"
repository = "https://github.com/jamiewannenburg/uacalcsrc"

[lib]
name = "uacalc_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
uacalc = { path = ".." }

[dev-dependencies]
# Test dependencies for Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
tempfile = "3.0"
